--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             border-radius: 15px;
             box-shadow: 0 10px 30px rgba(0,0,0,0.1);
             padding: 30px;
-            width: 300px; /* Uniform width for all containers */
+            width: 300px; /* Adjusted width for better fit */
             text-align: center;
             border: 1px solid #ddd;
             transition: background-color 0.3s, color 0.3s;
