--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@
                 <div id="timerDisplay1" class="timer-display">00:00:00</div>
             </div>
             <div class="button-group">
-                <button id="autoOnButton1" class="button" onclick="autoTurnOn(1)">Auto Turn On</button>
-                <button id="autoOffButton1" class="button" onclick="autoTurnOff(1)">Auto Turn Off</button>
+                <button id="autoOnButton1" class="button" onclick="autoTurnOn(1)">Timer On</button>
+                <button id="autoOffButton1" class="button" onclick="autoTurnOff(1)">Timer Off</button>
             </div>
             <div id="statusIndicator1" class="status-indicator">Status: Off</div>
         </div>
